--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.4.3",
     "nodemon": "^2.0.2",
     "vue": "^2.6.10",
